fix: set margin and padding to null for misalignment in deployment

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -13,6 +13,8 @@ body {
   min-height: 100%;
   overflow-y: hidden;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 @media (width <= 768px) {
